Add FurnaceListener tests